# Console

./: .gitignore  CMakeLists.txt  README.md  build_from_jenkins.sh  piga_host_config.yml.in
Data/Config/: wt_config.xml
Data/forms/: MainMenu.qml
cmake/: Definitions.hpp.in  FindQuaZip.cmake
include/pigaco/: App.hpp  Game.hpp
src/: App.cpp  DirectoryScanner.cpp  GameHostStarter.cpp  WebGames.cpp
src/packaging/: Package.cpp  PackageManager.cpp
